--- a/src/app/nabvar/nabvar.component.html
+++ b/src/app/nabvar/nabvar.component.html
@@ -6,19 +6,19 @@
 
     <ul class="nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#" (click)="onNavLinkClickHandler('home')">Home</a>
+          <a class="nav-link active" href="#" (click)="onNavLinkClickHandler('home')"><span>Home</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Experience</a>
+          <a class="nav-link" href="#"><span>Experience</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Project</a>
+          <a class="nav-link" href="#"><span>Project</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" (click)="onNavLinkClickHandler('blog')">Blogs</a>
+          <a class="nav-link" href="#" (click)="onNavLinkClickHandler('blog')"><span>Blogs</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Education</a>
+          <a class="nav-link" href="#"><span>Education</span></a>
         </li>
        
       
