--- a/src/app/right-container/right-container.component.html
+++ b/src/app/right-container/right-container.component.html
@@ -37,7 +37,7 @@
           <a class="btn btn-primary project-link" href="#"
               (click)="onClickDemo('easy-source')">DEMO</a>
           <!-- <a class="btn btn-primary project-link" href="https://www.youtube.com/watch?v=x1uVlIx_1HQ&feature=youtu.be" target='_blank'>DEMO</a> -->
-        </div>
+      </div>
       </div>
     </div>
   </div>
@@ -48,16 +48,42 @@
       </div>
   </div>
 
-  <div class="row skill-body">
-    <div class="col-xs-12">
+  
+  <div class="row skill-container">
+    <div class="row">
+    <div class="col-xs-4">
       <img src="../../assets/img/logos/angular.png" alt="angular" class="img-fluid rounded-circle logo" width="100px" height="100px">
-      <img src="../../assets/img/logos/rails.jpg" alt="rails" class="img-fluid rounded-circle logo" width="100px" height="100px">
-      <img src="../../assets/img/logos/ruby.jpeg" alt="ruby" class="img-fluid rounded-circle logo" width="60px" height="60px">
-      <img src="../../assets/img/logos/js.jpg" alt="js" class="img-fluid rounded-circle logo" width="120px" height="120px">
-      <img src="../../assets/img/logos/react.png" alt="react" class="img-fluid rounded-circle logo" width="100px" height="100px">
-      <img src="../../assets/img/logos/redux.png" alt="redux" class="img-fluid rounded-circle logo" width="60px" height="60px">
-      <img src="../../assets/img/logos/html.png" alt="html" class="img-fluid rounded-circle logo" width="80px" height="80px">
     </div>
+
+    <div class="col-xs-4">
+      <img src="../../assets/img/logos/rails.jpg" alt="rails" class="img-fluid rounded-circle logo" width="100px" height="100px">
+    </div>
+
+    <div class="col-xs-4">
+      <img src="../../assets/img/logos/ruby.jpeg" alt="ruby" class="img-fluid rounded-circle logo" width="100px" height="100px">
+    </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-4 text-center">
+        <img src="../../assets/img/logos/js.jpg" alt="js" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      </div>
+
+      <div class="col-xs-4">
+        <img src="../../assets/img/logos/react.png" alt="react" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      </div> 
+      
+      <div class="col-xs-4">
+        <img src="../../assets/img/logos/redux.png" alt="redux" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-4">
+        <img src="../../assets/img/logos/html.png" alt="html" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      </div>
+    </div>
+  
   </div>
         
   
