work nav link menu and sub menu

--- a/src/app/center-container/center-container.component.html
+++ b/src/app/center-container/center-container.component.html
@@ -3,10 +3,10 @@
           <div class="about-heading"><h6>ABOUT ME</h6></div> 
           <div class="about-detail">Highly passionate, imaginative full stack web developer looking to join a great company that
               believes in innovative solution. With a passion for front-end web development and experience in
-              Ruby on Rails, JavaScript, React/Redux, and CSS, I am ready to contribute for companies in
+              Ruby on Rails, JavaScript, React/Redux, Bootstrap and CSS, I am ready to contribute for companies in
               various domains and at the same time, explore and expand my knowledge to achieve
-              professional growth. Driven by my passion, I quit my long held retail job to pursue a web
-              development career and joined Flatiron immersive web application bootcamp which really
+              professional growth. Even though I am from retail management background, software development has always been keen interest
+              of mine. Driven by this passion, I recently joined Flatiron immersive web application bootcamp which really
               elevated my interest and passion to whole different level.</div>
         </div>
 
