--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <ul class="list-group portfolio-items">
-                                <li class="list-group-item">Full Stack Developer</li>
+                                <li class="list-group-item">Full Stack Web Developer</li>
                                 <li class="list-group-item">New York, NY</li>
                             </ul>
                         
@@ -23,7 +23,7 @@
                         <div class="col-md-6">
                                 <ul class="list-group portfolio-items">
                                         <li class="list-group-item">jaysanias@gmail.com</li>
-                                        <li class="list-group-item">347-284-9450</li>
+                                        <li class="list-group-item">347-736-8068(Text only)</li>
                                 </ul>
                             
                         </div>
