--- a/src/app/nabvar/nabvar.component.html
+++ b/src/app/nabvar/nabvar.component.html
@@ -21,8 +21,8 @@
               
                   <div class="dropdown-menu" aria-labelledby="autoSubMenu">
 
-                      <a href="#" class="dropdown-item">Website</a>
-                      <a href="#" class="dropdown-item">Demo</a>
+                      <a href="https://auto-generate-employee-shifts.herokuapp.com" target='_blank' class="dropdown-item">Website</a>
+                      <a href="#" class="dropdown-item" (click)="onNavLinkClickHandler('auto-shift')">Demo</a>
                   </div>
                 
                 </a>
@@ -33,8 +33,8 @@
               
                   <div class="dropdown-menu" aria-labelledby="autoSubMenu">
 
-                      <a href="#" class="dropdown-item">Website</a>
-                      <a href="#" class="dropdown-item">Demo</a>
+                      <a href="https://book-conference-rooms.herokuapp.com/" target='_blank' class="dropdown-item">Website</a>
+                      <a href="#" class="dropdown-item" (click)="onNavLinkClickHandler('book-conf')">Demo</a>
                   </div>
                 </a>
 
@@ -44,8 +44,8 @@
               
                   <div class="dropdown-menu" aria-labelledby="autoSubMenu">
 
-                      <a href="#" class="dropdown-item">Website</a>
-                      <a href="#" class="dropdown-item">Demo</a>
+                      <a href="https://easy-source.herokuapp.com/" target='_blank' class="dropdown-item">Website</a>
+                      <a href="#" class="dropdown-item" (click)="onNavLinkClickHandler('easy-source')">Demo</a>
                   </div>
                 
               </a>
