--- a/src/app/right-container/right-container.component.html
+++ b/src/app/right-container/right-container.component.html
@@ -1,6 +1,6 @@
   <div class="row projects">
     <div class="col-xs-12">
-      <div class="project-heading"><h6>THINGS I HAVE BUILT</h6></div>
+      <div class="project-heading"><h5>THINGS I HAVE BUILT</h5></div>
       <div class="project">
         <img src="../../assets/img/auto-schedule.png" alt="auto schedule" class="img-fluid rounded">
         <h5 class="text-center">Auto Generate Employee shifts</h5>
@@ -44,7 +44,7 @@
   
   <div class="row skill-heading">
       <div class="col-xs-12">
-          MY SKILLS
+          <h5>MY SKILLS</h5>
       </div>
   </div>
 
