--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
 <div class="container-fluid">
   <app-main-container *ngIf="navLinkSelected==='home'" [navClicked]="navClicked"></app-main-container>
   <app-blog *ngIf="navLinkSelected==='blog'"></app-blog>
+  <app-demo *ngIf="navLinkSelected==='auto-shift'||navLinkSelected==='book-conf'|| navLinkSelected==='easy-source'"
+      [demoToPlay]="navLinkSelected"></app-demo>
 </div>
 
 <div class="container-fluid">
