--- a/src/app/right-container/right-container.component.css
+++ b/src/app/right-container/right-container.component.css
@@ -2,6 +2,7 @@
     margin-bottom: 30px;
     background-color: lightblue;
     padding:10px;
+    box-shadow:10px 10px 30px grey; 
 }
 
 .project{
@@ -26,6 +27,7 @@
 .skill-container{
     background-color: white;
     padding: 5px 10px;
+    box-shadow:10px 10px 30px grey; 
 }
 
 .skill-container .row{
@@ -39,6 +41,7 @@
 .skill-heading{
     background-color: gold;
     padding: 5px 10px;
+    box-shadow:10px 10px 30px grey; 
 }
 
 /* .row, .col-xs-4{
