--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,90 @@
 
-<div class="row">
-  <div class="col-md-12">
+<div class="row footer footer-container">
+  <div class="col-md-4">
+    <div class="row">
+      <div class="col-sm-12">Things I like to do when I am not coding</div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/img/hobbies/family.png" width="100%" height="80px" alt="walking">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/img/hobbies/tour.jpeg" width="100%" height="80px" alt="city tour">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/img/hobbies/watchtv.png" width="100%" height="80px" alt="watching tv">
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="../../assets/img/hobbies/biking.jpeg" width="100%" height="80px" alt="biking">
+      </div>
+      <div class="col-sm-4">
+        <img src="../../assets/img/hobbies/workout.jpeg" width="100%" height="80px" alt="workout">
+      </div>
+
+    </div>
+    
+  </div>
+
+  <div class="col-md-4">
     This is my footer
   </div>
+
+
+  <div class="col-md-4">
+    <div class="row">
+      <div class="col-sm-12">
+        Interested areas
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-4">
+        Domains
+        <div class="row">
+          <div class="col-sm-12">
+            Retail
+          </div>
+          <div class="col-sm-12">
+            E-commerce
+          </div>
+          <div class="col-sm-12">
+              Social, Health
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        Skills
+        <div class="row">
+          <div class="col-sm-12">
+            Machine Learning
+          </div>
+          <div class="col-sm-12">
+            Python
+          </div>
+          <div class="col-sm-12">
+            Angular
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        Positions
+        <div class="row">
+          <div class="col-sm-12">
+            Front End Developer
+          </div>
+          <div class="col-sm-12">
+              UI/UX Designer
+          </div>
+          <div class="col-sm-12">
+              Full Stack Developer
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
 </div>
