--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -49,6 +49,10 @@
                             </a>
                         </li>
                     </ul>
+                    <a class="download" href="../../assets/docs/sanjay_sai.pdf" target="_blank">
+                        Download Resume
+                        <i class="far fa-file-pdf"></i>
+                    </a>
                 </div>
             </div>
         </div>
