--- a/src/app/nabvar/nabvar.component.html
+++ b/src/app/nabvar/nabvar.component.html
@@ -54,8 +54,8 @@
         <li class="nav-item">
           <a class="nav-link" href="#" (click)="onNavLinkClickHandler('blog')"><span>Blogs</span></a>
         </li>
-         <!-- <li class="nav-item">
-          <a class="nav-link" href="#"><span>Education</span></a>
+         <!-- <li class="nav-item download">
+          <a class="nav-link" href="#">Download Resume</a>
         </li>  -->
        
       
