--- a/src/app/right-container/right-container.component.html
+++ b/src/app/right-container/right-container.component.html
@@ -82,6 +82,9 @@
       <div class="col-xs-4">
         <img src="../../assets/img/logos/html.png" alt="html" class="img-fluid rounded-circle logo" width="100px" height="100px">
       </div>
+      <div class="col-xs-4">
+        <img src="../../assets/img/logos/postgres.png" alt="postgres" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      </div>
     </div>
   
   </div>
