--- a/src/app/nabvar/nabvar.component.html
+++ b/src/app/nabvar/nabvar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Sanjay Sai</a>
+      <a href="#" class="navbar-brand" (click)="onNavLinkClickHandler('home')">Sanjay Sai</a>
     </div>
     <ul class="nav mr-auto">
         <li class="nav-item">
