--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,6 +1,5 @@
 .footer{
     background-color: blue;
-    max-height: 200px;
     margin-bottom: -150px;
     left: 0;
     right: 0;
@@ -8,7 +7,53 @@
     color: white;
 }
 
+.footer-header{
+    background-color: gold;
+    color: black;
+}
+
 .footer div{
-    /* border: 1px solid red; */
-    padding: 1px 5px;
+    padding: 2px 5px;
+}
+
+.footer h5{
+    font-weight: bolder;
+    font-size: 1.5em;
+}
+
+.email span{
+    margin-left: 5px;
+}
+
+.email{
+    width: 30%;
+    height: auto;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    margin-bottom: 20px;
+}
+
+.contact{
+    background-color: black;
+}
+
+.interest{
+    margin: 2px;
+}
+
+.int-area span{
+    display: inline-block;
+    margin: 2px 5px;
+    padding-left: 6px;
+    width: 100%;
+    background-color: maroon;
+}
+
+.int-area .col-sm-12{
+    border-bottom: 1px solid white;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 0;
 }
