--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,49 +1,87 @@
 
 <div class="row footer footer-container">
+  <!--hobbies column start-->
   <div class="col-md-4">
     <div class="row">
-      <div class="col-sm-12">Things I like to do when I am not coding</div>
+      <div class="col-sm-12 footer-header text-center"><h5>Things I like to do when I am not coding</h5></div>
     </div>
-    <div class="row">
-      <div class="col-sm-4">
-        <img src="../../assets/img/hobbies/family.png" width="100%" height="80px" alt="walking">
+
+      <div class="row">
+          <div class="col col-sm-4">
+              <img class="img-responsive" src="../../assets/img/hobbies/tour.jpeg" width="100%" height="80px" alt="city tour">
+          </div>
+
+          <div class="col col-sm-4">
+              <img class="img-responsive" src="../../assets/img/hobbies/family.png" width="100%" height="80px" alt="walking">
+          </div>
+
+          <div class="col col-sm-4">
+            <img class="img-responsive" src="../../assets/img/hobbies/workout.jpeg" width="100%" height="80px" alt="workout">
+          </div>
       </div>
-      <div class="col-sm-4">
-        <img src="../../assets/img/hobbies/tour.jpeg" width="100%" height="80px" alt="city tour">
+      
+      <div class="row">
+          <div class="col col-sm-4">
+              <img class="img-responsive" src="../../assets/img/hobbies/cook.png" width="100%" height="80px" alt="walking">
+          </div>
+
+          <div class="col col-sm-4">
+            <img class="img-responsive" src="../../assets/img/hobbies/biking.jpeg" width="100%" height="80px" alt="biking">
+          </div>
+
+          <div class="col col-sm-4">
+              <img class="img-responsive" src="../../assets/img/hobbies/watchtv.png" width="100%" height="80px" alt="watching tv">
+          </div>
       </div>
-      <div class="col-sm-4">
-        <img src="../../assets/img/hobbies/watchtv.png" width="100%" height="80px" alt="watching tv">
-      </div>
+
     </div>
     
-    <div class="row">
-      <div class="col-sm-4">
-        <img src="../../assets/img/hobbies/biking.jpeg" width="100%" height="80px" alt="biking">
-      </div>
-      <div class="col-sm-4">
-        <img src="../../assets/img/hobbies/workout.jpeg" width="100%" height="80px" alt="workout">
-      </div>
+  <!--hobbies column end-->
 
+  <!--footer center part-->
+  <div class="col-md-4">
+    <div class="row">
+      <div class="col-sm-12 footer-header text-center">
+        <h5>Contact Me</h5>
+      </div>
     </div>
-    
-  </div>
 
-  <div class="col-md-4">
-    This is my footer
-  </div>
-
-
-  <div class="col-md-4">
+    <div class="contact">
     <div class="row">
-      <div class="col-sm-12">
-        Interested areas
+      <div class="col-sm-12 text-center">
+        <h5>Sanjay Sai</h5>
       </div>
     </div>
 
     <div class="row">
+      <div class="col-sm-12 text-center">
+        <h5>Text Me: 347-736-8068</h5>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12 text-center">
+         <a href="mailto:jaysanias@gmail.com" class="btn btn-primary email"> <i class="far fa-envelope"></i><span>Send Email</span></a>
+      </div>
+    </div>
+    </div>
+
+  </div>
+
+ 
+  <!--footer center part end-->
+
+  <div class="col-md-4">
+    <div class="row">
+      <div class="col-sm-12 footer-header text-center">
+        <h5>Interested areas</h5>
+      </div>
+    </div>
+
+    <div class="row int-area">
       <div class="col-sm-4">
-        Domains
-        <div class="row">
+        <span>Domains</span>
+        <div class="row interest">
           <div class="col-sm-12">
             Retail
           </div>
@@ -52,13 +90,14 @@
           </div>
           <div class="col-sm-12">
               Social, Health
-          </div>
+            </div>
+
         </div>
       </div>
 
       <div class="col-sm-4">
-        Skills
-        <div class="row">
+          <span>Skills</span>
+        <div class="row interest">
           <div class="col-sm-12">
             Machine Learning
           </div>
@@ -72,8 +111,8 @@
       </div>
 
       <div class="col-sm-4">
-        Positions
-        <div class="row">
+        <span>Positions</span>
+        <div class="row interest">
           <div class="col-sm-12">
             Front End Developer
           </div>
