--- a/src/app/right-container/right-container.component.html
+++ b/src/app/right-container/right-container.component.html
@@ -22,7 +22,6 @@
           <a class="btn btn-primary project-link" href="https://book-conference-rooms.herokuapp.com/" target='_blank'>WEBSITE</a>
           <a class="btn btn-primary project-link" href="#"
               (click)="onClickDemo('book-conf')">DEMO</a>
-          <!-- <a class="btn btn-primary project-link" href="https://www.youtube.com/watch?v=7ygbT22pV6c&feature=youtu.be" target='_blank'>DEMO</a> -->
         </div>
       </div>
 
@@ -36,7 +35,6 @@
           <a class="btn btn-primary project-link" style="display:inline-block" href="https://easy-source.herokuapp.com/" target='_blank'>WEBSITE</a>
           <a class="btn btn-primary project-link" href="#"
               (click)="onClickDemo('easy-source')">DEMO</a>
-          <!-- <a class="btn btn-primary project-link" href="https://www.youtube.com/watch?v=x1uVlIx_1HQ&feature=youtu.be" target='_blank'>DEMO</a> -->
       </div>
       </div>
     </div>
@@ -51,39 +49,41 @@
   
   <div class="row skill-container">
     <div class="row">
-    <div class="col-xs-4">
-      <img src="../../assets/img/logos/angular.png" alt="angular" class="img-fluid rounded-circle logo" width="100px" height="100px">
+    <div class="col ">
+      <img class="img-responsive" src="../../assets/img/logos/angular.png" alt="angular" class="img-fluid rounded-circle logo" width="100px" height="100px">
     </div>
 
-    <div class="col-xs-4">
-      <img src="../../assets/img/logos/rails.jpg" alt="rails" class="img-fluid rounded-circle logo" width="100px" height="100px">
+    <div class="col ">
+      <img class="img-responsive" src="../../assets/img/logos/rails.jpg" alt="rails" class="img-fluid rounded-circle logo" width="100px" height="100px">
     </div>
 
-    <div class="col-xs-4">
-      <img src="../../assets/img/logos/ruby.jpeg" alt="ruby" class="img-fluid rounded-circle logo" width="100px" height="100px">
+    <div class="col">
+      <img class="img-responsive" src="../../assets/img/logos/ruby.jpeg" alt="ruby" class="img-fluid rounded-circle logo" width="100px" height="100px">
     </div>
     </div>
 
     <div class="row">
-      <div class="col-xs-4 text-center">
-        <img src="../../assets/img/logos/js.jpg" alt="js" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      <div class="col">
+        <img class="img-responsive" src="../../assets/img/logos/js.jpg" alt="js" class="img-fluid rounded-circle logo" width="100px" height="100px">
       </div>
 
-      <div class="col-xs-4">
-        <img src="../../assets/img/logos/react.png" alt="react" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      <div class="col">
+        <img class="img-responsive" src="../../assets/img/logos/react.png" alt="react" class="img-fluid rounded-circle logo" width="100px" height="100px">
       </div> 
       
-      <div class="col-xs-4">
-        <img src="../../assets/img/logos/redux.png" alt="redux" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      <div class="col">
+        <img class="img-responsive" src="../../assets/img/logos/redux.png" alt="redux" class="img-fluid rounded-circle logo" width="100px" height="100px">
       </div>
     </div>
 
     <div class="row">
-      <div class="col-xs-4">
-        <img src="../../assets/img/logos/html.png" alt="html" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      <div class="col">
+        <img class="img-responsive" src="../../assets/img/logos/html.png" alt="html" class="img-fluid rounded-circle logo" width="100px" height="100px">
       </div>
-      <div class="col-xs-4">
-        <img src="../../assets/img/logos/postgres.png" alt="postgres" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      <div class="col">
+        <img class="img-responsive" src="../../assets/img/logos/postgres.png" alt="postgres" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      </div>
+      <div class="col">
       </div>
     </div>
   
