--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -3,7 +3,7 @@
    
     <blockquote class="embedly-card"><h4><a target="_blank" href="https://medium.com/@shachsan/building-a-simple-server-with-node-js-and-express-js-9e7cdb89386e">
       <br/><h1>Building a simple server with Node.js and Express.js</h1><br/>
-      <img src="../../assets/img/blog-node.png" alt="node js" width="50%" height="250px">
+      <img class="img-responsive" src="../../assets/img/blog-node.png" alt="node js" width="50%" height="50%">
     </a></h4><br/>
     <p>During my days in coding bootcamp, I heard a lot about Node.js but never got a time to explore it because it wasn't a part of our course. Finally, I was blessed with some free time this weekend which I 
       used for introducing myself to Node.js and here I am today trying to share my understanding about this powerful javascript runtime.
@@ -17,7 +17,7 @@
    
     <blockquote class="embedly-card"><h4><a target="_blank" href="https://medium.com/@shachsan/automate-your-web-app-test-with-selenium-webdriver-using-ruby-12a877822868">
       <br/><h1>Automate your web app test with Selenium WebDriver using Ruby</h1><br/>
-      <img src="../../assets/img/blog-testing.jpg" alt="node js" width="40%" height="250px">
+      <img src="../../assets/img/blog-testing.jpg" alt="node js" width="50%" height="50%">
     </a></h4><br/><p>Before we jump into some big words like automate, selenium and webdriver, let’s first understand — what testing is.
 
         Testing is one of the most important process in software or web application development. We test our application all the times from very beginning when we write our first line of code to the end of project completion. To be more precise, testings are done even before we start coding, for eg, reviews of software requirement specifications, such as business requirements, functional requirements, system requirements, user stories, epics, use cases 
@@ -32,7 +32,7 @@
    
     <blockquote class="embedly-card"><h4><a target="_blank" href="https://medium.com/@shachsan/what-is-amazon-ec2-and-how-to-launch-one-97a9f81bfda4">
       <br/><h1>What is Amazon EC2 and How to launch one?</h1><br/>
-      <img src="../../assets/img/blog-amazon.png" alt="node js" width="40%" height="250px">
+      <img src="../../assets/img/blog-amazon.png" alt="node js" width="50%" height="50%">
     </a></h4>
     <br/>
     <p>Amazon EC2 stands for Amazon Elastic Compute Cloud. It’s basically a web service that provides 
@@ -53,7 +53,7 @@
    
     <blockquote class="embedly-card"><h4><a target="_blank" href="https://medium.com/@shachsan/how-to-utilize-rails-layouts-to-keep-our-view-templates-less-clutter-1f6f50a1ef29">
       <br/><h1>How to utilize Rails layouts to keep our view templates less clutter</h1><br/>
-      <img src="../../assets/img/blog-rails.png" alt="node js" width="70%" height="250px">
+      <img src="../../assets/img/blog-rails.png" alt="node js" width="70%" height="50%">
     </a></h4>
     <br/><p>The word layouts should be pretty common to those who have been working on rails projects for while. 
       If you are new to rails like me and have heard of layouts but do not know how to implement it in your project, 
