--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,8 +6,8 @@
       <div class="col-sm-12 footer-header text-center"><h5>Things I like to do when I am not coding</h5></div>
     </div>
 
-      <div class="row">
-          <div class="col col-sm-4">
+      <div class="row hobbies">
+          <div class="col col-sm-4 text-center">
               <img class="img-responsive" src="../../assets/img/hobbies/tour.jpeg" width="100%" height="80px" alt="city tour">
           </div>
 
@@ -20,7 +20,7 @@
           </div>
       </div>
       
-      <div class="row">
+      <div class="row hobbies">
           <div class="col col-sm-4">
               <img class="img-responsive" src="../../assets/img/hobbies/cook.png" width="100%" height="80px" alt="walking">
           </div>
